Fix download alignment

--- a/src/implementations/vanilla/components/file/_file.scss
+++ b/src/implementations/vanilla/components/file/_file.scss
@@ -253,24 +253,21 @@ $_image-width: null !default;
 @include breakpoints.up('s') {
   .ecl-file__download,
   .ecl-file__translation-download {
+    margin-top: 0;
     width: auto;
   }
   .ecl-file__info {
     margin-right: map.get(theme.$spacing, 'm');
   }
-  .ecl-file__download {
-    margin-top: 0;
+  .ecl-file__translation-item {
+    flex-direction: row;
+    max-width: 100%;
   }
 }
 /* stylelint-disable-next-line order/order */
 @include breakpoints.up('m') {
   .ecl-file__translation-container {
     padding-left: $_file-translation-container-padding-left;
-  }
-
-  .ecl-file__translation-item {
-    flex-direction: row;
-    max-width: 100%;
   }
 
   .ecl-file__detail {
